<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.bonson.qqtapk.view.ui.setting.password.PasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.bonson.resource.view.MToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar">

            <include layout="@layout/toolbar" />
        </com.bonson.resource.view.MToolbar>

        <EditText
            style="@style/EditText.Password"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_old_password"
            android:text="@={viewModel.oldPassword}" />

        <View style="@style/Line" />

        <EditText
            style="@style/EditText.Password"
            android:hint="@string/hint_new_password"
            android:text="@={viewModel.newPassword}" />

        <View style="@style/Line" />

        <EditText
            style="@style/EditText.Password"
            android:hint="@string/hint_again_password"
            android:text="@={viewModel.surePassword}" />
    </LinearLayout>
</layout>