<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.bonson.qqtapk.view.ui.forget.ResetViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/LogoImage"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/app_logo" />

            <View style="@style/Line" />

            <EditText
                style="@style/EditText.Phone"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_mobile"
                android:text="@={viewModel.mobile}" />

            <View style="@style/Line" />

            <EditText
                style="@style/EditText.Password"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_new_password"
                android:text="@={viewModel.password}" />

            <View
                style="@style/Line"
                android:layout_marginTop="20dp" />

            <EditText
                style="@style/EditText.Password"
                android:hint="@string/hint_again_password"
                android:text="@={viewModel.newPassword}" />

            <View style="@style/Line" />

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/BtnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:onClick="@{()->viewModel.reset()}"
                android:text="@string/reset_password" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>