<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.bonson.qqtapk.view.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.bonson.resource.view.MToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar">

            <include layout="@layout/toolbar" />
        </com.bonson.resource.view.MToolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    style="@style/LogoImage"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="40dp" />

                <View style="@style/Line" />

                <EditText
                    style="@style/EditText.Phone"
                    android:hint="@string/hint_mobile"
                    android:text="@={viewModel.mobile}" />

                <View style="@style/Line" />

                <View
                    style="@style/Line"
                    android:layout_marginTop="20dp" />

                <EditText
                    style="@style/EditText.Password"
                    android:hint="@string/hint_password"
                    android:text="@={viewModel.password}" />

                <View style="@style/Line" />

                <CheckBox
                    style="@style/CheckBox"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:checked="@={viewModel.auto}"
                    android:text="@string/remember_password"
                    android:textColor="#999999" />

                <Button
                    style="@style/BtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="@{viewModel.enable}"
                    android:onClick="login"
                    android:text="@string/login" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:onClick="forget"
                        android:text="@string/forget_password"
                        android:textColor="#999999"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:onClick='register'
                        android:text="@string/now_register"
                        android:textColor="#999999"
                        android:textSize="14sp" />
                </FrameLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>